# horkora

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  scripts.sh
horkora/: asgi.py  settings.py  urls.py  wsgi.py
news/: admin.py  api.py  feed.py  forms.py  models.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_news_is_draft.py  0002_rename_news_article_alter_article_options.py  0003_category_alter_news_is_draft_news_category.py  0004_news_author_alter_news_category_alter_news_title.py  0005_news_published_at_news_updated_at.py  0006_alter_news_is_draft.py  0007_about_remove_news_is_draft.py
static/css/: header.css
templates/: navbar.html
templates/news/: about.html  addnews.html  base.html  categories.html  category.html  index.html  newslist.html  theme.html  viewnews.html
utils/: scrape.py
