[tool.poetry]
name = "horkora"
version = "0.1.0"
description = "A simple news aggregator."
authors = ["Daniel <rozario@duck.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
django-ninja = "^0.22.2"
django-ninja-jwt = "^5.2.5"
validators = "^0.22.0"
django-crispy-forms = "^2.1"
crispy-bulma = "^0.10.0"
django = "^5.0.1"



[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
