[project]
name = "horkora"
version = "0.1.0"
description = "A simple news aggregator."
authors = [
    { name = "rozari0", email = "rozario@duck.com" }
]
dependencies = [
    "django>=5.1.1",
    "beautifulsoup4>=4.12.3",
    "django-ninja>=1.3.0",
    "django-ninja-jwt>=5.3.3",
    "django-crispy-forms>=2.3",
    "crispy-bulma>=0.11.0",
    "validators>=0.34.0",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
